correções de portugues

--- a/src/main/webapp/sistema/ONG/editarVaga.xhtml
+++ b/src/main/webapp/sistema/ONG/editarVaga.xhtml
@@ -130,10 +130,10 @@
 						</p:selectManyCheckbox>
 
 						<p:outputLabel for="selectOneRadio-trabalho"
-							value="Trabalho à distancia:" />
+							value="Trabalho à distância:" />
 						<p:selectOneRadio id="selectOneRadio-trabalho"
 							value="#{editarVaga.vaga.trabalhoDistancia}" required="true"
-							requiredMessage="O campo trabalho à distancia é de preenchimento obrigatório">
+							requiredMessage="O campo trabalho à distância é de preenchimento obrigatório">
 							<f:selectItem itemLabel="Sim" itemValue="Sim" />
 							<f:selectItem itemLabel="Não" itemValue="Não" />
 						</p:selectOneRadio>
