--- a/src/main/webapp/sistema/ONG/visualizarVagas.xhtml
+++ b/src/main/webapp/sistema/ONG/visualizarVagas.xhtml
@@ -57,7 +57,7 @@
 								value="#{vaga.ongEntity.cidade} - #{vaga.ongEntity.estado}" />
 
 
-							<h:outputText value="Trabalho à distancia"
+							<h:outputText value="Trabalho à distância:"
 								style="font-weight: bold" />
 							<h:outputText value="#{vaga.trabalhoDistancia}" />
 
