Não exibir botoes desabilitados correções gerais

--- a/src/main/webapp/cadastrarONG.xhtml
+++ b/src/main/webapp/cadastrarONG.xhtml
@@ -62,7 +62,7 @@
 							maxlength="80" value="#{ongController.ongModel.email}"
 							required="true"
 							requiredMessage="O email é de preenchimento obrigatório">
-							<f:validateRegex validatorMessage="Email incorreto"
+							<f:validateRegex validatorMessage="E-mail incorreto"
 								pattern="^[_A-Za-z0-9-\+]+(\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\.[A-Za-z0-9]+)*(\.[A-Za-z]{2,})$" />
 						</p:inputText>
 
