--- a/src/main/webapp/cadastrarVoluntario.xhtml
+++ b/src/main/webapp/cadastrarVoluntario.xhtml
@@ -86,7 +86,7 @@
 						<p:inputText id="inputText-email" style="width:100%"
 							maxlength="80"
 							value="#{voluntarioController.voluntarioModel.email}"
-							required="true"  validatorMessage="Email incorreto"
+							required="true"  validatorMessage="E-mail incorreto"
 							requiredMessage="O campo e-mail é de preenchimento obrigatório">
 							<f:validateRegex 
 								pattern="^[_A-Za-z0-9-\+]+(\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\.[A-Za-z0-9]+)*(\.[A-Za-z]{2,})$" />
