--- a/src/main/webapp/sistema/ONG/visualizarEventos.xhtml
+++ b/src/main/webapp/sistema/ONG/visualizarEventos.xhtml
@@ -25,7 +25,7 @@
 					action="#{consultaEventosView.retornaEventoConformeBusca}"></p:commandButton>
 
 
-				<p:commandButton value="Filtar" update="form" icon="fa fa-filter"
+				<p:commandButton value="Filtrar" update="form" icon="fa fa-filter"
 					style="margin-right:50px; float: right"
 					action="#{consultaEventosView.filtrar}"></p:commandButton>
 
