--- a/src/main/webapp/sistema/Voluntario/cadastrarDoacao.xhtml
+++ b/src/main/webapp/sistema/Voluntario/cadastrarDoacao.xhtml
@@ -13,7 +13,7 @@
 <ui:composition template="/template/Voluntario/layoutBase.xhtml">
 	<ui:define name="content">
 		<p:tabView style="width:50% ;margin:auto;">
-			<p:tab title="Cadastro de Objeto para Doação">
+			<p:tab title="Cadastro de objeto para doação">
 
 				<h:form enctype="multipart/form-data">
 
