--- a/src/main/webapp/sistema/Voluntario/visualizarVagas.xhtml
+++ b/src/main/webapp/sistema/Voluntario/visualizarVagas.xhtml
@@ -190,7 +190,7 @@
 							style="font-weight: bold" />
 
 
-						<h:outputText value=" " />
+						<br />
 						<h:outputText value=" " />
 
 						<p:commandButton value="Tenho Interesse!"
@@ -205,7 +205,7 @@
 						<br />
 
 						<h:outputText
-							value="Avalie aqui o quanto esta vaga é de seu interesse:" />
+							value="Avalie aqui o quanto esta vaga é de seu interesse:" style="font-weight: bold; font-size: 14px;"/>
 						<h:outputText value=" " />
 						<p:rating value="#{editarVaga.vaga.avaliacaoVaga.avaliacao}" />
 						<p:commandButton value="Avaliar Vaga" id="commandButton-curtir"
@@ -266,7 +266,7 @@
 							value="#{recomendarVagas.selectedVaga.periodoString}"
 							style="font-weight: bold" />
 
-						<h:outputText value=" " />
+						<br />
 						<h:outputText value=" " />
 
 						<p:commandButton value="Tenho Interesse!"
@@ -280,7 +280,7 @@
 						<br />
 
 						<h:outputText
-							value="Avalie aqui o quanto esta vaga é de seu interesse:" />
+							value="Avalie aqui o quanto esta vaga é de seu interesse:" style="font-weight: bold; font-size: 14px;"/>
 						<h:outputText value=" " />
 						<p:rating value="#{editarVaga.vaga.avaliacaoVaga.avaliacao}" />
 						<p:commandButton value="Avaliar Vaga" id="commandButton-curtir2"
