--- a/src/main/webapp/sistema/ONG/visualizarVagas.xhtml
+++ b/src/main/webapp/sistema/ONG/visualizarVagas.xhtml
@@ -15,7 +15,7 @@
 		<h:form id="form">
 
 			<p:inputText id="inputText-busca"
-				style="width:30%; height:30px; margin-left:60px" maxlength="80"
+				style="width:30%; height:30px; margin-left:2cm" maxlength="80"
 				placeholder="Digite o titulo da vaga"
 				value="#{consultaVagasView.busca}" />
 			<p:outputLabel value=" " />
@@ -23,7 +23,7 @@
 				action="#{consultaVagasView.retornaVagasConformeBusca}"></p:commandButton>
 
 			<div align="right">
-				<p:commandButton value="Filtrar" update=":form:filtrosDetail"
+				<p:commandButton value="Filtrar" update=":form:filtrosDetail" style="margin-right:2cm"
 					icon="fa fa-filter" oncomplete="PF('filtrosDialog').show()">
 				</p:commandButton>
 			</div>
