--- a/src/main/webapp/sistema/Voluntario/visualizarEventos.xhtml
+++ b/src/main/webapp/sistema/Voluntario/visualizarEventos.xhtml
@@ -22,7 +22,7 @@
 					<div style="height: 40px; width: 100%">
 
 						<p:inputText id="inputText-busca"
-							style="height:30px; margin-left:50px; width: 30%" maxlength="80"
+							style="height:30px; margin-left:2cm; width: 30%" maxlength="80"
 							placeholder="Digite o título do evento"
 							value="#{consultaEventosView.busca}" />
 						<p:outputLabel value=" " />
@@ -31,7 +31,7 @@
 
 
 						<p:commandButton value="Filtrar" update="form" icon="fa fa-filter"
-							style="margin-right:50px; float: right"
+							style="margin-right:2cm; float: right"
 							action="#{consultaEventosView.filtrar}"></p:commandButton>
 
 						<p:selectOneMenu id="basic" style=" float: right"
