--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -23,8 +23,13 @@
 	<div id="content">
 		<ui:insert name="content">
 
-			<p:graphicImage url="/resources/imagens/inicial.jpg" width="100%"
-				height="700" />
+			<p:graphicImage url="/resources/imagens/inicial.jpg"
+				style=" max-width: 100%;  
+          width: 100%;
+          max-height: 750px; 
+          min-height: auto;     
+          background-size:100%;
+          background-repeat: no-repeat;" />
 
 
 		</ui:insert>
