--- a/src/main/webapp/sistema/Voluntario/home.xhtml
+++ b/src/main/webapp/sistema/Voluntario/home.xhtml
@@ -12,8 +12,15 @@
 <ui:composition template="/template/Voluntario/layoutBase.xhtml">
 
 	<ui:define name="content">
-		<p:graphicImage url="/resources/imagens/home.jpg" width="100%"
-			height="500" />
+		<div align="center">
+			<p:graphicImage url="/resources/imagens/home.jpg"
+				style=" max-width: 100%;  
+          width: 100%;
+          max-height: 700px; 
+          min-height: auto;     
+          background-size:100%;
+          background-repeat: no-repeat;" />
+		</div>
 	</ui:define>
 
 </ui:composition>
