--- a/src/main/webapp/sistema/Voluntario/visualizarDoacoes.xhtml
+++ b/src/main/webapp/sistema/Voluntario/visualizarDoacoes.xhtml
@@ -15,7 +15,7 @@
 		<h:form id="form">
 
 			<p:inputText id="inputText-busca"
-				style="width:30%; height:30px; margin-left:60px" maxlength="80"
+				style="width:30%; height:30px; margin-left:2cm" maxlength="80"
 				placeholder="Digite o título da doação"
 				value="#{consultaDoacoesView.busca}" />
 			<p:outputLabel value=" " />
