--- a/src/main/webapp/sistema/ONG/cadastrarEvento.xhtml
+++ b/src/main/webapp/sistema/ONG/cadastrarEvento.xhtml
@@ -13,7 +13,7 @@
 <ui:composition template="/template/ONG/layoutBase.xhtml">
 	<ui:define name="content">
 		<p:tabView style="width:50% ;margin:auto;">
-			<p:tab title="Cadastro de Eventos Beneficientes">
+			<p:tab title="Cadastro de evento beneficiente">
 
 				<h:form id="form-cadastro-evento" enctype="multipart/form-data">
 
