--- a/src/main/webapp/sistema/ONG/cadastrarVaga.xhtml
+++ b/src/main/webapp/sistema/ONG/cadastrarVaga.xhtml
@@ -33,13 +33,13 @@
 							value="#{vagaController.vagaModel.descricao}" required="true"
 							requiredMessage="O campo descrição é de preenchimento obrigatório" />
 
-						<p:outputLabel value="Responsável pela Vaga"
+						<p:outputLabel value="Nome do responsável"
 							for="inputText-responsavel" />
 						<p:inputText id="inputText-responsavel" style="width:100%"
 							maxlength="80"
 							value="#{vagaController.vagaModel.nomeResponsavel}" />
 
-						<p:outputLabel value="E-mail" for="inputText-email" />
+						<p:outputLabel value="E-mail para contato" for="inputText-email" />
 						<p:inputText id="inputText-email" style="width:100%"
 							maxlength="80" value="#{vagaController.vagaModel.email}" validatorMessage="Email incorreto"
 							requiredMessage="O campo email é de preenchimento obrigatório">
@@ -47,7 +47,7 @@
 								pattern="^[_A-Za-z0-9-\+]+(\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\.[A-Za-z0-9]+)*(\.[A-Za-z]{2,})$" />
 						</p:inputText>
 
-						<p:outputLabel value="Banner da Vaga" for="foto" />
+						<p:outputLabel value="Banner da vaga" for="foto" />
 						<p:fileUpload id="foto" mode="simple"
 							value="#{vagaController.uploadedFile}" />
 
@@ -118,7 +118,7 @@
 						</p:selectManyCheckbox>
 
 						<p:outputLabel for="selectOneRadio-trabalho"
-							value="Trabalho à distância:" />
+							value="Esta vaga funcionará a distância?" />
 						<p:selectOneRadio id="selectOneRadio-trabalho"
 							value="#{vagaController.vagaModel.trabalhoDistancia}"
 							required="true"
